# autowealth-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
autowealth/: __init__.py  __main__.py
configs/: a_share_15y_baseline.yaml  a_share_smoke.yaml  macro_data_template.csv
docs/: API.md  ARCHITECTURE.md  AUTOMATION.md  BADGES.md  ROADMAP.md  backtest-rules.md  data-source-plan.md  deepseek-research-agent.md  deployment.md  factor-definition.md  local-development.md  macro-regime.md  macro-valuation-contract.md  portfolio-construction.md  product-development-framework.md  production-deployment.md  real-data-research.md  real-research-report.md  research-api.md  research-dashboard.md  research-pipeline.md  strategy-spec.md  structured-warnings.md  zh-cn-localization.md
examples/: analyze_600545.py  api_client.py  app.py  demo.py  quick_start.py  research_api_demo.py  research_pipeline_demo.py  run_real_15y_research.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
mobile/: README.md  pubspec.yaml
scripts/: run_tests.ps1  start_dashboard.ps1  start_research_api.ps1  verify_production_deployment.ps1
tests/: __init__.py  test_advanced_indicators.py  test_agents.py  test_alerts.py  test_analyzer.py  test_api.py  test_ashare_data_provider.py  test_backtest.py  test_data_sources.py  test_deepseek_research_agent.py  test_demo_data.py  test_factors.py  test_index_provider_chain.py  test_macro_regime.py  test_macro_validation.py  test_ml_predictor.py  test_models.py  test_nlp.py  test_portfolio_backtester.py  test_portfolio_builder.py  test_portfolio_optimizer.py  test_real_research_pipeline.py  test_research_api.py  test_research_pipeline.py  test_research_run_store.py  test_social_sentiment.py  test_structured_warnings.py  test_utils.py  test_valuation_provider_contract.py
(+160 files in other folders)
