[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autowealth-ai"
version = "0.1.0"
description = "基于多智能体的个人财富管理与投资决策引擎"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AutoWealth Team", email = "team@autowealth.ai"}
]
keywords = ["ai", "investment", "wealth-management", "multi-agent", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.28",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "akshare>=1.14.0",
    "pyarrow>=15.0.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
app = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]
api = [
    "fastapi>=0.104.0",
    "httpx>=0.27.0",
    "uvicorn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/autowealth/autowealth-ai"
Repository = "https://github.com/autowealth/autowealth-ai"
Documentation = "https://autowealth-ai.readthedocs.io"
Issues = "https://github.com/autowealth/autowealth-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autowealth*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: tests that require explicit external network access",
]
